--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -13,7 +13,8 @@
                 <i class="icon"><img class="" src="img/Logos/Flag-ENGx1.png" /></i>
                 
             </div>
-                 อังกฤษ พรีเมียร์ลีก</ion-item>
+                 อังกฤษ พรีเมียร์ลีก
+            </ion-item>
             <div class="row padding-bottom" ng-repeat="match in matchCtrl.DisplayMatches">
                 <div class="col col-40 item" 
                      ng-class="{'item-stable': !match.TeamHome.IsSelected,
