--- a/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/CreateReward.cshtml
+++ b/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/CreateReward.cshtml
@@ -37,11 +37,11 @@
                 @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.ThumbnailPath, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ThumbnailPath, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" name="ThumbnailPath" id="ThumbnailPath"/><br />
+                @*@Html.EditorFor(model => model.ThumbnailPath, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.ThumbnailPath, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -49,7 +49,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ImagePath, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" name="ImagePath" id="ImagePath"/><br />
+                @*@Html.EditorFor(model => model.ImagePath, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.ImagePath, "", new { @class = "text-danger" })
             </div>
         </div>
