--- a/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/Index.cshtml
+++ b/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/Index.cshtml
@@ -3,22 +3,25 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-<div class="pull-right"><a class="btn btn-info" href="@Url.Action("Create")">เพิ่ม</a></div>
+<h2>รายการวันที่สิ้นสุดการส่ง</h2>
+<div class="pull-right"><a class="btn btn-info btn-lg" href="@Url.Action("Create")">เพิ่ม</a></div>
+<div class="clearfix"></div>
 <br />
 <br />
 <table class="table table-responsive">
     <tr>
-        <th>วันสิ้นสุดการส่ง</th>
+        <th>วันที่สิ้นสุดการส่ง</th>
         <th>คะแนนที่ใช้แลก</th>
-        <th>รายละเอียด</th>
+        <th>จัดการของรางวัล</th>
+        <th>จัดการผู้โชคดี</th>
     </tr>
     @foreach (var rewardGroup in Model)
     {
         <tr>
             <td>@rewardGroup.ExpiredDate</td>
             <td>@rewardGroup.RequestPoints</td>
-            <td><a href="@Url.Action("Details", new { id = rewardGroup.Id })">รายละเอียด</a></td>
+            <td><a href="@Url.Action("Details", new { id = rewardGroup.Id })"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+            <td><a href="@Url.Action("Details", new { id = rewardGroup.Id })"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
         </tr>
     }
 </table>
